add: the message is print on screen

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         </header>
 
         <main>
-            <div id="app"></div>
+            <div id="app">
+                <h1>{{ message }}</h1>
+            </div>
         </main>
 
         <footer>
             
         </footer>
-        <script src="js/script.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
