add: image shows in page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <main>
             <div id="app">
                 <h1>{{ message }}</h1>
+                <img :src= "image" alt="">
             </div>
         </main>
 
